--- a/CSS/styleBienvenida.css
+++ b/CSS/styleBienvenida.css
@@ -167,6 +167,86 @@ label #sidebar_btn:hover {
 }
 
 
+/* Formulario Proyecto */
+
+.contenedor_general .contenido .formulario {
+    box-sizing: border-box;
+    padding: 20px 50px 50px 50px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-around;
+}
+
+.contenedor_general .contenido .formulario h2 {
+    text-align: center;
+    text-transform: uppercase;
+    word-spacing: 1px;
+    color: rgb(34, 34, 59);
+    margin: 30px 0 50px 0;
+}
+
+.contenedor_general .contenido .formulario .input {
+    display: block;
+}
+
+.contenedor_general .contenido .formulario .form_label {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    padding: 0px 10px 5px 0px;
+    margin-bottom: 5px;
+    display: inline-block;
+    font-weight: bold;
+}
+
+.contenedor_general .contenido .formulario .form_input {
+    font-size: 16px;
+    padding: 12px 20px;
+    width: 700px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+    margin-bottom: 20px;
+    outline: none;
+}
+
+.contenedor_general .contenido .formulario .fecha {
+    width: 304px;
+}
+
+.contenedor_general .contenido .formulario .input .fecha_inicial {
+    margin-right: 80px;
+}
+
+.contenedor_general .contenido .formulario .text_area {
+    width: 100%;
+    height: 100px;
+    box-sizing: border-box;
+    padding: 12px 20px;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    margin-bottom: 20px;
+    outline: none;
+    font-family: 'Roboto', sans-serif;
+}
+
+.contenedor_general .contenido .formulario .boton {
+    width: 200px;
+    height: 60px;
+    padding: 10px 30px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    background-color: rgba(111, 118, 206);
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 18px;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+
 /* Responsive */
 
 @media screen and (max-width:780px) {
