--- a/CSS/styleBienvenida.css
+++ b/CSS/styleBienvenida.css
@@ -51,7 +51,7 @@ header {
     background-color: rgb(73, 73, 110);
     padding-top: 30px;
     width: 250px;
-    height: calc(100% - 5%);
+    height: calc(100% - 5.5%);
     transition: 0.8s;
     transition-property: left;
     overflow-y: auto;
@@ -59,6 +59,7 @@ header {
 }
 
 .info_perfil {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -145,7 +146,7 @@ label #sidebar_btn:hover {
     background: url(../img/background1.jpg) no-repeat;
     background-position: center;
     background-size: cover;
-    height: calc(100% - 7%);
+    height: calc(100% - 7.5%);
     transition: 0.8s;
     overflow-y: auto;
 }
@@ -214,11 +215,13 @@ label #sidebar_btn:hover {
     outline: none;
 }
 
-.contenedor_general .contenido .formulario .fecha {
+.contenedor_general .contenido .formulario .fecha,
+.contenedor_general .contenido .formulario .datos {
     width: 304px;
 }
 
-.contenedor_general .contenido .formulario .input .fecha_inicial {
+.contenedor_general .contenido .formulario .input .fecha_inicial,
+.contenedor_general .contenido .formulario .input .id_proyecto {
     margin-right: 80px;
 }
 
@@ -268,7 +271,7 @@ label #sidebar_btn:hover {
     }
     .contenido {
         flex: 1;
-        height: calc(100% - 7%);
+        height: calc(100% - 7.5%);
         padding: 10px 20px;
         transition: 0.3s;
     }
